--- a/src/ui/Dockerfile_alpine
+++ b/src/ui/Dockerfile_alpine
@@ -1,7 +1,7 @@
 FROM alpine:3.14
 
 WORKDIR /app
-COPY Gemfile* ./
+ADD Gemfile* ./
 
 RUN set -x && \
 apk --no-cache --update add ruby-full ruby-dev build-base && \
@@ -9,7 +9,7 @@ gem install bundler:1.17.2 --no-document && \
 bundle install && \
 apk del ruby-dev build-base
 
-COPY . ./
+ADD . ./
 ENV POST_SERVICE_HOST=post POST_SERVICE_PORT=5000 COMMENT_SERVICE_HOST=comment COMMENT_SERVICE_PORT=9292
 EXPOSE 9292/tcp
 
