--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
           - post_db
           - comment_db
   ui:
-    build: ./ui
+    #build: ./ui
     image: ${USERNAME}/ui:${UI_VERSION}
     ports:
       - ${UI_PORT}:${UI_PORT}/tcp
@@ -18,8 +18,16 @@ services:
       front_net:
         aliases:
           - ui
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.ui
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
+
   post:
-    build: ./post-py
+    #build: ./post-py
     image: ${USERNAME}/post:${POST_VERSION}
     networks:
       back_net:
@@ -28,8 +36,15 @@ services:
       front_net:
         aliases:
           - post
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.post
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
   comment:
-    build: ./comment
+    #build: ./comment
     image: ${USERNAME}/comment:${COMMENT_VERSION}
     networks:
       back_net:
@@ -38,51 +53,42 @@ services:
       front_net:
         aliases:
           - comment
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
+  #prometheus:
+    #image: ${USERNAME}/prometheus
+    #ports:
+      #- '9090:9090'
+    #volumes:
+      #- prometheus_data:/prometheus
+    #command: # Передаем доп параметры в командной строке
+      #- '--config.file=/etc/prometheus/prometheus.yml'
+      #- '--storage.tsdb.path=/prometheus'
+      #- '--storage.tsdb.retention=1d' # Задаем время хранения метрик в 1 день
+    #networks:
+      #- back_net
+      #- front_net
 
-  prometheus:
-    image: ${USERNAME}/prometheus
-    ports:
-      - '9090:9090'
-    volumes:
-      - prometheus_data:/prometheus
-    command: # Передаем доп параметры в командной строке
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--storage.tsdb.retention=1d' # Задаем время хранения метрик в 1 день
-    networks:
-      - back_net
-      - front_net
-
-  node-exporter:
-    image: prom/node-exporter:v0.15.2
-    user: root
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
-    command:
-      - '--path.procfs=/host/proc'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($$|/)"'
-    networks:
-      - back_net
-      - front_net
+  #node-exporter:
+    #image: prom/node-exporter:v0.15.2
+    #user: root
+    #volumes:
+      #- /proc:/host/proc:ro
+      #- /sys:/host/sys:ro
+      #- /:/rootfs:ro
+    #command:
+      #- '--path.procfs=/host/proc'
+      #- '--path.sysfs=/host/sys'
+      #- '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($$|/)"'
+    #networks:
+      #- back_net
+      #- front_net
 
 
 volumes:
-  prometheus_data:
+  #prometheus_data:
   post_db:
 
 networks:
   front_net:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-      - subnet: 10.0.1.0/24
   back_net:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-      - subnet: 10.0.2.0/24
