--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -11,16 +11,23 @@ services:
           - comment_db
   ui:
     build: ./ui
-    image: ${USERNAME}/ui:${UI_VERSION}
+    image: ${USERNAME}/ui:logging
     ports:
       - ${UI_PORT}:${UI_PORT}/tcp
     networks:
       front_net:
         aliases:
           - ui
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.ui
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
   post:
     build: ./post-py
-    image: ${USERNAME}/post:${POST_VERSION}
+    image: ${USERNAME}/post:logging
     networks:
       back_net:
         aliases:
@@ -28,9 +35,16 @@ services:
       front_net:
         aliases:
           - post
+    logging:
+        driver: "fluentd"
+        options:
+          fluentd-address: localhost:24224
+          tag: service.post
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
   comment:
     build: ./comment
-    image: ${USERNAME}/comment:${COMMENT_VERSION}
+    image: ${USERNAME}/comment:logging
     networks:
       back_net:
         aliases:
@@ -38,6 +52,8 @@ services:
       front_net:
         aliases:
           - comment
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
 
 volumes:
   post_db:
