--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,6 +1,8 @@
-USERNAME=tuturu0
 UI_PORT=9292
 MONGO_VERSION=4
-UI_VERSION=1.0
-COMMENT_VERSION=1.0
-POST_VERSION=1.0
+UI_VERSION=logging
+COMMENT_VERSION=logging
+POST_VERSION=logging
+USERNAME=tuturu0
+ZIPKIN_ENABLED=true
+
