--- a/kubernetes/reddit/mongo-deployment.yml
+++ b/kubernetes/reddit/mongo-deployment.yml
@@ -28,6 +28,7 @@ spec:
         name: mongo
         volumeMounts:
         - name: mongo-persistent-storage
+        # name: mongo-gce-pd-storage
           mountPath: /data/db
       volumes:
       - name: mongo-persistent-storage
